--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,20 +6,37 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.3
 
 jobs:
-  create_infrastructure:
+  #create_infrastructure:
+    #docker:
+      #- image: amazon/aws-cli
+    #steps:
+      #- checkout
+      #- run:
+          #name: Create Cloudformation Stack
+          #command: |
+            #aws cloudformation deploy \
+              #--template-file template.yml \
+              #--stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+              #--region us-east-1
+        
+  configure_infrastructure:
     docker:
-      - image: amazon/aws-cli
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - add_ssh_keys:
+              fingerprints: ["a8:c0:6b:1c:27:ec:57:8c:d9:7f:d7:a6:90:85:9e:e4"]
       - run:
-          name: Create Cloudformation Stack
+          name: Install Ansible
           command: |
-            aws cloudformation deploy \
-              --template-file template.yml \
-              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-              --region us-east-1
+            apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            ansible-playbook -i inventory.txt main.yml
 
 workflows:
   my_Workflow:
     jobs:
-      - create_infrastructure
+      #- create_infrastructure
+      - configure_infrastructure
