--- a/main.yml
+++ b/main.yml
@@ -1,49 +1,6 @@
 ---
-- name: "update apt packages."
-  become: yes
-  apt: 
-    update_cache: yes 
-
-- name: "upgrade packages"
-  become: yes
-  apt:
-    upgrade: yes
-
-- name: remove dependencies that are no longer required
-  become: yes
-  apt:
-    autoremove: yes
-
-- name: "install dependencies."
-  become: yes
-  apt:
-    name: ["nodejs", "npm"]
-    state: latest
-    update_cache: yes
-- name: "install pm2"
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
-
-- name: Creates directory
-  file:
-    path: ~/web
-    state: directory
-  
-- name: Copy index test page
-  template:
-    src: "files/index.js"
-    dest: "~/web/index.js"
-
-- name: Executing node
-  shell: |
-    pm2 start ~/web/index.js -f
-    
 - name: Exercise for setting up a web server in an EC
-  hosts: all
+  hosts: 18.205.149.47
   user: ec2_user
   become: true
   become_method: sudo 
