--- a/main.yml
+++ b/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Exercise for setting up a web server in an EC
   hosts: 54.146.151.27
-  user: ec2_user
+  user: ec2-user
   become: true
   become_method: sudo 
   become_user: root
