--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-              fingerprints: ["a8:c0:6b:1c:27:ec:57:8c:d9:7f:d7:a6:90:85:9e:e4"]
+              fingerprints: ["e8:c0:15:1e:72:10:a0:97:12:2e:95:04:0c:cf:b0:e3"]
       - run:
           name: Install Ansible
           command: |
